<resources>
    <string name="app_name">SimpleMediasoup</string>
    <string name="meeting">Meeting</string>
    <string name="end">End</string>
    <string name="mute">Mute</string>
    <string name="stop_video">Stop Video</string>
    <string name="share_content">Share Content</string>
    <string name="participants">Participants</string>
    <string name="more">More</string>
    <string name="talk">Talk</string>
    <string name="open_video">Open Video</string>
    <string name="chat">Chat</string>
    <string name="cancel">Cancel</string>
    <string name="open_camera">Open Camera</string>
    <string name="start_meeting">Start Meeting</string>
    <string name="meeting_id">Meeting ID</string>
    <string name="display_name">Display Name</string>
    <string name="join_meeting_options">Join Meeting options</string>
    <string name="join_meeting">Join Meeting</string>
    <string name="do_not_auto_connect_audio">Do not auto connect audio</string>
    <string name="do_not_auto_open_camera">Do not auto open camera</string>
</resources>