<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/header_join_meeting"
        layout="@layout/view_header_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/shape_top_frame_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_join_meeting">

        <LinearLayout
            android:id="@+id/cl_option_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/shape_top_bottom_frame_line">

            <EditText
                android:id="@+id/edit_meeting_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/meeting_id"
                android:textColorHint="#A5A5A5"
                android:textSize="16sp"
                android:background="@drawable/shape_top_bottom_frame_line"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edit_display_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/display_name"
                android:textColorHint="#A5A5A5"
                android:textSize="16sp"
                android:background="@drawable/shape_top_bottom_frame_line"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edit_meeting_id"/>


        </LinearLayout>

        <TextView
            android:id="@+id/btn_join_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/join_meeting"
            android:padding="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_top_bar_frame"
            app:layout_constraintTop_toBottomOf="@+id/cl_option_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/join_meeting_options"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/shape_top_bottom_frame_line">

            <include
                android:id="@+id/not_auto_connect_audio"
                layout="@layout/item_option_layout"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/shape_center_frame_line"/>

            <include
                android:id="@+id/not_auto_open_camera"
                layout="@layout/item_option_layout"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>